--- a/src/index.css
+++ b/src/index.css
@@ -57,16 +57,35 @@ html,
   text-align: left;
 }
 
-.auth-inner {
-  width: 1700px;
-  height: 1000px;
+/* .auth-inner {
+  width: 2700px;
+  height: 1250px;
   margin: auto;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   /* padding: 40px 55px 45px 55px; */
+  /* border-radius: 15px;
+  transition: all 0.3s;
+} */ 
+
+.auth-inner {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   border-radius: 15px;
   transition: all 0.3s;
 }
+
+/* @media (min-width: 768px) {
+  .auth-inner {
+    width: 500px; /* Adjust as needed */
+    /* height: auto;
+  }
+} */ 
 
 .auth-wrapper .form-control:focus {
   border-color: #167bff;
